language-server/src/tests/snapshots/gleam_language_server__tests__action__rename_invalid_parameter_label.snap
---
source: language-server/src/tests/action.rs
expression: "fn func(thisIsALabel param: Int) { param }"
---
----- BEFORE ACTION
fn func(thisIsALabel param: Int) { param }
        ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑             


----- AFTER ACTION
fn func(this_is_a_label param: Int) { param }
