language-server/src/tests/snapshots/gleam_language_server__tests__action__rename_invalid_parameter_label2.snap
---
source: language-server/src/tests/action.rs
expression: "fn ignore(thisIsALabel _ignore: Int) { 25 }"
---
----- BEFORE ACTION
fn ignore(thisIsALabel _ignore: Int) { 25 }
            ↑                              


----- AFTER ACTION
fn ignore(this_is_a_label _ignore: Int) { 25 }
