language-server/src/tests/snapshots/gleam_language_server__tests__action__rename_invalid_parameter_name2.snap
---
source: language-server/src/tests/action.rs
expression: "fn pass(label paramName: Bool) { paramName }"
---
----- BEFORE ACTION
fn pass(label paramName: Bool) { paramName }
              ↑                             


----- AFTER ACTION
fn pass(label param_name: Bool) { paramName }
