language-server/src/tests/snapshots/gleam_language_server__tests__action__rename_invalid_parameter_name3.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n    let add = fn(numA: Int, num_b: Int) { numA + num_b }\n}"
---
----- BEFORE ACTION
pub fn main() {
    let add = fn(numA: Int, num_b: Int) { numA + num_b }
    ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑                           
}


----- AFTER ACTION
pub fn main() {
    let add = fn(num_a: Int, num_b: Int) { numA + num_b }
}
