language-server/src/tests/snapshots/gleam_language_server__tests__action__rename_invalid_pattern_assignment.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n    let assert 42 as theAnswer = 42\n}"
---
----- BEFORE ACTION
pub fn main() {
    let assert 42 as theAnswer = 42
    ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑   
}


----- AFTER ACTION
pub fn main() {
    let assert 42 as the_answer = 42
}
