language-server/src/tests/snapshots/gleam_language_server__tests__action__rename_invalid_string_prefix_pattern.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n    let assert \"prefix\" <> coolSuffix = \"prefix-suffix\"\n}"
---
----- BEFORE ACTION
pub fn main() {
    let assert "prefix" <> coolSuffix = "prefix-suffix"
                        ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑       
}


----- AFTER ACTION
pub fn main() {
    let assert "prefix" <> cool_suffix = "prefix-suffix"
}
