language-server/src/tests/snapshots/gleam_language_server__tests__action__rename_invalid_string_prefix_pattern_alias.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n    let assert \"prefix\" as thePrefix <> _suffix = \"prefix-suffix\"\n}"
---
----- BEFORE ACTION
pub fn main() {
    let assert "prefix" as thePrefix <> _suffix = "prefix-suffix"
                ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑       
}


----- AFTER ACTION
pub fn main() {
    let assert "prefix" as the_prefix <> _suffix = "prefix-suffix"
}
