language-server/src/tests/snapshots/gleam_language_server__tests__action__rename_invalid_tuple_pattern.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n    let #(a, secondValue) = #(1, 2)\n}"
---
----- BEFORE ACTION
pub fn main() {
    let #(a, secondValue) = #(1, 2)
             ▔▔▔▔↑                 
}


----- AFTER ACTION
pub fn main() {
    let #(a, second_value) = #(1, 2)
}
