language-server/src/tests/snapshots/gleam_language_server__tests__action__rename_invalid_type_alias.snap
---
source: language-server/src/tests/action.rs
expression: type Fancy_Bool = Bool
---
----- BEFORE ACTION
type Fancy_Bool = Bool
      ▔▔▔▔▔▔▔▔▔▔↑     


----- AFTER ACTION
type FancyBool = Bool
